chore: renames package.json project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-frontend-boilerplate",
+  "name": "cinenow-frontend-a3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
