--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-multi-carousel": "^2.8.5"
+    "react-hook-form": "^7.51.4",
+    "react-multi-carousel": "^2.8.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
