--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
