--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "next": "14.2.1",
